// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert Error messages generate a nice error for some basic invalid syntax 1`] = `
"file:1:1: Empty list is not a function call
()
^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 1`] = `
"file:1:5: 'type' needs exactly 2 arguments, got 0
(type)
----^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 2`] = `
"file:1:7: 'type' needs exactly 2 arguments, got 1
(type a)
------^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 3`] = `
"file:1:7: 'type' needs exactly 2 arguments, got 1
(type A)
------^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 4`] = `
"file:1:9: Not a valid type
(type A 3)
--------^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 5`] = `
"file:1:7: 'a' is not a valid name for a type. Type names should start with a capital letter. Try 'A'?
(type a {})
------^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 6`] = `
"file:1:14: 'type' needs exactly 2 arguments, got 3
(type ID {} 10)
-------------^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 7`] = `
"file:1:7: 'type' expected a symbol as a name
(type 3 5)
------^"
`;

exports[`Convert Error messages generate nice error message for bad type declarations 8`] = `
"file:1:10: Type variable out of scope
(type ID (-> a a))
---------^"
`;

exports[`Convert Error messages generate nice error message for conditionals 1`] = `
"file:1:3: 'if' needs exactly 3 arguments, got 0
(if)
--^"
`;

exports[`Convert Error messages generate nice error message for conditionals 2`] = `
"file:1:5: 'if' needs exactly 3 arguments, got 1
(if 5)
----^"
`;

exports[`Convert Error messages generate nice error message for conditionals 3`] = `
"file:1:7: 'if' needs exactly 3 arguments, got 2
(if x 2)
------^"
`;

exports[`Convert Error messages generate nice error message for conditionals 4`] = `
"file:1:11: 'if' needs exactly 3 arguments, got 4
(if x 2 3 0)
----------^"
`;

exports[`Convert Error messages generate nice error message for invalid definitions 1`] = `
"file:1:7: 'define' needs exactly 2 arguments, got 0
(define)
------^"
`;

exports[`Convert Error messages generate nice error message for invalid definitions 2`] = `
"file:1:9: 'define' needs exactly 2 arguments, got 1
(define 5)
--------^"
`;

exports[`Convert Error messages generate nice error message for invalid definitions 3`] = `
"file:1:9: 'define' needs exactly 2 arguments, got 1
(define x)
--------^"
`;

exports[`Convert Error messages generate nice error message for invalid definitions 4`] = `
"file:1:9: 'define' expected a symbol
(define 4 2)
--------^"
`;

exports[`Convert Error messages generate nice error message for invalid definitions 5`] = `
"file:1:15: 'define' needs exactly 2 arguments, got 3
(define x 10 23)
--------------^"
`;

exports[`Convert Error messages generate nice error message for invalid lambda expressions 1`] = `
"file:1:7: 'lambda' is missing the argument list
(lambda)
------^"
`;

exports[`Convert Error messages generate nice error message for invalid lambda expressions 2`] = `
"file:1:9: body can't be empty
(lambda 7)
--------^"
`;

exports[`Convert Error messages generate nice error message for invalid lambda expressions 3`] = `
"file:1:9: Expected a list of arguments
(lambda 7 5)
--------^"
`;

exports[`Convert Error messages generate nice error message for invalid lambda expressions 4`] = `
"file:1:10: A list of arguments should be made of symbols
(lambda (7) x)
---------^"
`;

exports[`Convert Error messages generate nice error message for invalid lambda expressions 5`] = `
"file:1:12: A list of arguments should be made of symbols
(lambda (x 7) x)
-----------^"
`;

exports[`Convert Error messages generate nice error message for invalid lambda expressions 6`] = `
"file:1:12: There is another argument with the same name
(lambda (x x) x)
-----------^"
`;

exports[`Convert Error messages generate nice error message for invalid let expressions 1`] = `
"file:1:4: 'let' is missing the bindings
(let)
---^"
`;

exports[`Convert Error messages generate nice error message for invalid let expressions 2`] = `
"file:1:6: 'let' bindings should be a map
(let x 5)
-----^"
`;

exports[`Convert Error messages generate nice error message for invalid let expressions 3`] = `
"file:1:6: 'let' bindings should be a map
(let (x 5) x)
-----^"
`;

exports[`Convert Error messages generate nice error message for invalid records 1`] = `
"file:1:8: '|' is not a valid field name. Fields should start with ':' (colon).
{:x 10 | y :z 20}
-------^"
`;

exports[`Convert Error messages generate nice error message for invalid type annotations 1`] = `
"file:1:4: 'the' is missing the type and value
(the)
---^"
`;

exports[`Convert Error messages generate nice error message for invalid type annotations 2`] = `
"file:1:6: 'the' is missing the expression
(the 3)
-----^"
`;

exports[`Convert Error messages generate nice error message for invalid type annotations 3`] = `
"file:1:7: 'the' is missing the expression
(the ID)
------^"
`;

exports[`Convert Error messages generate nice error message for invalid type annotations 4`] = `
"file:1:6: Not a valid type
(the 3 3)
-----^"
`;

exports[`Convert Error messages generate nice error message for invalid type annotations 5`] = `
"file:1:11: Too many arguments. 'the' should take two arguments.
(the ID 3 3)
----------^"
`;

exports[`Convert Error messages generate nice error message for records with duplicated labels 1`] = `
"file:1:8: Duplicated label
{:x 10 :x 20}
-------^"
`;

exports[`Convert Error messages generate nice error messages for invalid exports 1`] = `
"file:1:7: 'export' needs exactly 1 arguments, got 0
(export)
------^"
`;

exports[`Convert Error messages generate nice error messages for invalid exports 2`] = `
"file:1:9: 'export' expected a symbol
(export 1)
--------^"
`;

exports[`Convert Error messages generate nice error messages for invalid exports 3`] = `
"file:1:9: 'export' expected a symbol
(export (+ 1 2))
--------^"
`;

exports[`Convert Error messages generate nice error messages for invalid exports 4`] = `
"file:1:13: 'export' needs exactly 1 arguments, got 3
(export 1 2 3)
------------^"
`;

exports[`Convert Error messages generate nice errors for do-blocks 1`] = `
"file:1:3: empty body
(do)
--^"
`;
